Moved the hardware_utils to another package. Added more classes for supporting other OSs. Refined and hardened the implementations. Added zig build scripts for automated source recognition. Reduced compiled binary sizes.
# Conflicts:
#	pom.xml